Closed
Bug 335909
Opened 19 years ago
Closed 19 years ago
Sporadic success viewing Amazon / Wikipedia site
Categories
(Core :: Networking: HTTP, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.8.1beta2
People
(Reporter: starakan, Assigned: darin.moz)
References
()
Details
(Keywords: fixed1.8.1, regression)
Attachments
(5 files, 2 obsolete files)
|
256.68 KB,
text/plain
|
Details | |
|
257.64 KB,
text/plain
|
Details | |
|
1.64 KB,
patch
|
Biesinger
:
review+
dbaron
:
approval1.8.1+
|
Details | Diff | Splinter Review |
|
294.55 KB,
text/plain
|
Details | |
|
2.56 KB,
patch
|
Biesinger
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.0.2) Gecko/20060308 Firefox/1.5.0.2
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.0.2) Gecko/20060308 Firefox/1.5.0.2
When I try to access Amazon.com, I have sporadic success. Much of the time, I receive a blank page. Usually, if I refresh the page anywhere from 5 to 10 times, the page appears. But when I try to access another part of Amazon, the same thing happens. Repeated refreshes sometimes causes the page to appear, but usually it becomes so frustrating, I switch over to IE to use Amazon.
Reproducible: Always
Steps to Reproduce:
1. Go to http://www.amazon.com
2. If blank page appears, refresh screen
3. Continue refreshing screen to see if page appears (it usually does not)
Actual Results:
Frustration.
Expected Results:
Success.
Comment 1•19 years ago
|
||
WFM using Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.0.2) Gecko/20060308 Firefox/1.5.0.2
Have you tried emptying your cache?
Does it work in Firefox's safe-mode or with a new profile?
http://kb.mozillazine.org/Safe_Mode_(Firefox)
http://kb.mozillazine.org/Profile_Folder
Comment 2•19 years ago
|
||
I see this issue as well on my XP Pro system. It only seems to happen at Amazon and it ONLY seems to happen on this one particular machine out of the three running XP Pro that I regularly use (two at home, one at work).
Comment 3•19 years ago
|
||
confirming, because putterman tells me he sees this too.
putterman tells me:
"Either ever since I upgraded to 1.5 (I'm on 1.5.0.4 ) or I got a new computer (a Dell XP 400 running XP Home) I have been unable to use amazon.com in Firefox. The majority of the time, I get blank pages whenever I go to Amazon or attempt to navigate through the site. Refreshing multiple times can often make the page show up."
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 5•19 years ago
|
||
gavin / adam, have you heard of this sort of issue?
I think I've seen it with wikipedia, too.
Comment 6•19 years ago
|
||
Can't say that I have... but I'm mostly using Linux trunk these days.
Comment 7•19 years ago
|
||
> I think I've seen it with wikipedia, too.
I'm seeing it (or what I think is it) on wikipedia right now with my debug trunk build.
Comment 8•19 years ago
|
||
I'm not sure if this is related to the amazon issue, but here's what I'm seeing with wikipedia
I searched for "sith wiki" on google and found http://en.wikipedia.org/wiki/Sith and then I clicked on that link.
(yes yes, I'm a nerd, you caught me.)
when I first tried to load that page, it failed.
My guess is that we cached it somehow, because on reload (not, not shift reload) here's what I'd get back from the server:
HTTP/1.0 304 Not Modified
Date: Mon, 10 Jul 2006 21:29:42 GMT
Server: Apache
ETag: W/"enwiki:pcache:idhash:68184-0!1!0!0!!en!2--20060710194242"
Cache-Control: private, s-maxage=0, max-age=0, must-revalidate
Vary: Accept-Encoding, Cookie
Vary: Accept-Encoding
X-Cache: MISS from srv6.wikimedia.org
X-Cache-Lookup: MISS from srv6.wikimedia.org:80
Connection: keep-alive
Would a response like that cause the same "blank" page to show up on reload (note, regular reload, not shift reload)?
a shift reload "fixes" the problem for me.
d'oh! I should have checked about:cache?device=disk for "Key: http://en.wikipedia.org/wiki/Sith" to see if I had an empty entry before doing the shift reload!)
I'm going to enable PR logging for HTTP so that next time this happens, I can see what's going on.
darin, any hunches on what might be going on?
| Assignee | ||
Comment 9•19 years ago
|
||
Unfortunately, the 304 response doesn't tell us very much about the copy in the browser's cache. The next time you see this, it might be a good idea to try "View->Source" or check out the entry in about:cache to see if it is an empty file. Page Info might also be interesting.
Comment 10•19 years ago
|
||
I did do a view source and page info, and it was a completely empty document.
darin tells me that it means the original cached document was empty
I'm now running with:
NSPR_LOG_MODULES=nsHttp:5
NSPR_LOG_FILE=C:\home\mozilla-nspr.log
so if it happens again I'll have more info.
I'm going to morph the summary here to cover wikipedia until I figure out the two are not related.
Summary: Sporadic success viewing Amazon site → Sporadic success viewing Amazon / Wikipedia site
Comment 11•19 years ago
|
||
I started the trunk and tried again (googling for "wiki cheese" and then clicking on the http://en.wikipedia.org/wiki/Cheese link.
see the end of the look, look for "Cheese" to see the http protocol log info.
| Assignee | ||
Comment 12•19 years ago
|
||
I think I see what's going on here. This is triggered by a prefetch that is aborted because the prefetched document is not cacheable. For some reason, aborting the prefetch leaves a malformed cache entry that is empty. When the user visits the page for real, the browser attempts to use the empty cache entry. It validates it against the server, and the server says that the entry is valid. As a result, we end up serving the empty file to the user. Looks like a pure HTTP bug to me.
Assignee: nobody → darin
Component: General → Networking: HTTP
Product: Firefox → Core
QA Contact: general → networking.http
Target Milestone: --- → mozilla1.8.1beta2
Version: unspecified → Trunk
| Assignee | ||
Comment 13•19 years ago
|
||
This was probably caused by my patch for bug 330397.
| Assignee | ||
Comment 14•19 years ago
|
||
Yup, this is a regression from bug 330397 (and possibly bug 189570 for the 1.8 branch). The problem is that we are storing partial cache entries in the cache that lack a 'content-length' header. As a result, the code that re-uses cache entries thinks that the cache entries are complete since there is no information to suggest otherwise.
| Assignee | ||
Comment 15•19 years ago
|
||
This patch solves the problem for the "wiki cheese" google search testcase that seth produced. It is a 1.8 branch specific patch since the corresponding code on the trunk changed considerably. I'm going to post a separate trunk patch shortly.
Attachment #228755 -
Flags: superreview?(bzbarsky)
Attachment #228755 -
Flags: review?(cbiesinger)
Comment 16•19 years ago
|
||
(In reply to comment #15)
> Created an attachment (id=228755) [edit]
Is the issue that ProcessNormal (and hence, InstallCacheListener) never gets called in the case here, which would otherwise set mOpenedCacheForWriting?
Comment 17•19 years ago
|
||
scott writes:
"I opened the browser to the mozilla home page, then went to Amazon. I got a blank page. I hit reload 3 or 4 times and still got a blank page."
| Assignee | ||
Comment 18•19 years ago
|
||
> Is the issue that ProcessNormal (and hence, InstallCacheListener) never gets
> called in the case here, which would otherwise set mOpenedCacheForWriting?
Yes. I believe that OnStartRequest is returning an error, which causes us never to reach InstallCacheListener. Another choice would be to fix this bug by catching that error there.
Comment 19•19 years ago
|
||
Comment on attachment 228755 [details] [diff] [review]
v1 patch
OK... are you intentionally using == for these comparisons instead of & like in ProcessNormal?
| Assignee | ||
Comment 20•19 years ago
|
||
Yes, "==" is key because I'm selecting the case where these cache entries are newly created. OK... I think you've convinced me that more documentation is needed in the patch. Revised patch coming up...
| Assignee | ||
Updated•19 years ago
|
Attachment #228755 -
Attachment is obsolete: true
Attachment #228755 -
Flags: superreview?(bzbarsky)
Attachment #228755 -
Flags: review?(cbiesinger)
Comment 21•19 years ago
|
||
*** Bug 344920 has been marked as a duplicate of this bug. ***
| Assignee | ||
Updated•19 years ago
|
Flags: blocking1.8.1+
Comment 22•19 years ago
|
||
At least something must have happened between 1.9a1_2006022804 and 1.9a1_2006022812 that triggered the bug suddenly.
I see the white page (the Google link to the English Wikipedia page) already in 1.9a1_2006022812.
Comment 23•19 years ago
|
||
related to bug 342119?
| Assignee | ||
Comment 24•19 years ago
|
||
Simpler and more direct patch. This patch was created against the MOZILLA_1_8_BRANCH. The affected code is much different on the trunk, so a different patch is going to be necessary.
Attachment #229756 -
Flags: review?(cbiesinger)
Updated•19 years ago
|
Attachment #229756 -
Flags: review?(cbiesinger) → review+
| Assignee | ||
Updated•19 years ago
|
Attachment #229756 -
Flags: approval1.8.1?
Comment on attachment 229756 [details] [diff] [review]
v2 patch
a=dbaron on behalf of drivers. Please check in to MOZILLA_1_8_BRANCH and mark fixed1.8.1 once you have.
However, I'm also a little concerned that there's no trunk patch -- please make sure that the issue doesn't get lost so that we don't regress in the next release.
Attachment #229756 -
Flags: approval1.8.1? → approval1.8.1+
Flags: blocking1.9a1?
| Assignee | ||
Comment 26•19 years ago
|
||
fixed1.8.1
holding bug open for a trunk patch.
Keywords: fixed1.8.1
Comment 27•19 years ago
|
||
This was filed against 1.5.0.2 and is very evil, should it go to 1.8.0 branch?
Flags: blocking1.8.0.6?
Comment 28•19 years ago
|
||
*** Bug 342119 has been marked as a duplicate of this bug. ***
Comment 29•19 years ago
|
||
Please ignore comment 28 -- sorry.
Comment 30•19 years ago
|
||
Comment 31•19 years ago
|
||
darin, putterman downloaded "Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1b1) Gecko/20060722 BonEcho/2.0b1" which should have your fix.
unfortunately, he is still able to reproduce the amazon problem.
he writes:
"This didn't solve it for me. I've attached nspr logs for a run where I went to the home page followed by amazon.com. Amazon.com is blank."
I've just attached his nspr log.
should I spin this issue off to a new bug? (note, his issue matches the original issue reported in this bug.)
Comment 32•19 years ago
|
||
I think this patch has also cleared up the issues I reported in bug 322851 - I cannot reproduce it in build 2006080305. However, I would rather those with more knowledge than I of how prefetching works give it a quick read to confirm the changes would have resolved those issues before closing it.
Comment 33•19 years ago
|
||
*** Bug 347233 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 34•19 years ago
|
||
Trunk patch. This patch solves the "wiki cheese" google search scenario.
Attachment #232042 -
Flags: review?(cbiesinger)
| Assignee | ||
Comment 35•19 years ago
|
||
*** Bug 339459 has been marked as a duplicate of this bug. ***
Comment 36•19 years ago
|
||
Comment on attachment 232042 [details] [diff] [review]
trunk patch
OK, as discussed, this is wrong because ResponseIsComplete can be true even though not all content has actually been written to the cache. In addition, it looks like this would doom entities that are sent without chunked and without a content-length.
Attachment #232042 -
Flags: review?(cbiesinger) → review-
| Assignee | ||
Comment 37•19 years ago
|
||
Revised patch per discussion with biesi. It's best not to use nsHttpTransaction::ResponseIsComplete because that field is not set to true when the connection is closed by the server (in the case of a response that lacks a Content-Length header and is not chunked), and ResponseIsComplete may report true before all of the data has been written to the cache. The cache is only populated when the stream listener reads data from the channel.
Attachment #232042 -
Attachment is obsolete: true
Attachment #232051 -
Flags: review?(cbiesinger)
Updated•19 years ago
|
Attachment #232051 -
Flags: review?(cbiesinger) → review+
Comment 38•19 years ago
|
||
the "wiki cheese" problem doesn't seem to be what putterman is seeing, so I've spun off his specific problem to bug #347685
| Assignee | ||
Comment 39•19 years ago
|
||
fixed-on-trunk
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Comment 40•19 years ago
|
||
*** Bug 333275 has been marked as a duplicate of this bug. ***
Comment 41•19 years ago
|
||
Comment on attachment 229756 [details] [diff] [review]
v2 patch
approved for 1.8.0 branch, a=dveditz for drivers
Attachment #229756 -
Flags: approval1.8.0.7+
Updated•19 years ago
|
Flags: blocking1.8.0.7? → blocking1.8.0.7+
Comment 42•19 years ago
|
||
*** Bug 348451 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 43•19 years ago
|
||
Comment on attachment 229756 [details] [diff] [review]
v2 patch
This is not needed for Firefox 1.5.0.x. The mOpenedCacheForWriting business doesn't exist there, and that's what caused this bug.
Attachment #229756 -
Flags: approval1.8.0.7+
Updated•18 years ago
|
Flags: blocking1.9a1?
You need to log in
before you can comment on or make changes to this bug.
Description
•