fixes bug 335909 "Sporadic success viewing Amazon / Wikipedia site" r=biesi a=dbaron